--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,34 @@
-# IDE
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/.idea/deploymentTargetSelector.xml
-/.idea/vcs.xml
-.DS_Store
+# Gradle files
+.gradle/
+build/
 
-# Build artifacts
-/build
-/*/build
-.cxx
-.externalNativeBuild
+# Local configuration file (sdk path, etc)
+local.properties
 
-# Kotlin
-.kotlin
-
-# Logs
+# Log/OS Files
 *.log
 
-# Android Studio captures
-/captures
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.aab
+*.apk
+output-metadata.json
 
-# Secrets & Signing
+# IntelliJ
+*.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
 *.jks
 *.keystore
+
+# Google Services (e.g. APIs or Firebase)
 google-services.json
+
+# Android Profiling
+*.hprof
